working in progress

--- a/2-views/courseDetail.html
+++ b/2-views/courseDetail.html
@@ -11,7 +11,7 @@
   </head>
   
   <body>
-    <div data-role="view" data-title="課程細節" id="actionsheet-view" data-use-native-scrolling="true" style="font-family:  'Noto Sans TC' " data-show="dataAlreadyShown">
+    <div data-role="view" data-title="團體課程" id="actionsheet-view" data-use-native-scrolling="true" style="font-family:  'Noto Sans TC' " data-show="dataAlreadyShown">
         <!--<h3 id="actionResult">TEST</h3>-->
         <ul data-role="listview" data-source="courseDetail" data-template="courseItemTemplate" class="courseList"></ul>
         <div style="margin-left:20px; margin-right:20px">
@@ -37,6 +37,8 @@
         id = "簽到按鈕#:ID#"
         data-actionsheet-context="#:ID#">簽到</a>
 
+        <img src="picPlaceholder.png" width="150" height="150" style="float:left;margin-right:10px"/> 
+        <br><br><br><br><br><br>
         <h4>課程編號: #: 課程編號 #</h4>
         <h4>課程名稱: #: 課程名稱 #</h4>
         <h4>老師姓名: #: 老師姓名 #</h4>
