--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
     -->
 
   <style>
+  
+    .km-on-ios  .km-list > li {
+        background-color: rgb(250,250,250);
+        border-radius:10px;
+        margin: 10px;
+    }
+
+    
     .km-on-ios .km-header .km-navbar
     /* for data-title="北大林口中心團課" */
     {
@@ -102,10 +110,10 @@
     <ul data-role="listview" data-type="group" style="margin-top: -25px" >
       <li >
         <ul>
-          <li style="padding: 0px; margin-top: -10px" >
+          <li style="padding: 0px; margin:0px;margin-top: -10px; border-radius: 0px; background-color: white" >
             <ul data-role="buttongroup" data-index="0" data-select="切換課程">
-              <li style="padding:10px" >已報名課程</li>
-              <li>參加過課程</li>
+              <li style="width: 20%; border-radius: 0px;" >已報名課程</li>
+              <li style="width: 20%; border-radius: 0px;">參加過課程</li>
             </ul>
           </li>
         </ul>
@@ -124,16 +132,19 @@
       <span class="報名課程title">已報名課程</span>
       <div style="height: 15px"></div>
 
-      <ul data-role="listview" data-source="courseDataSource" data-pull-to-refresh="true" data-template="nav-template" data-header-template="header-template" class="main-menu">
+      <ul data-role="listview" data-source="navDataSource" data-pull-to-refresh="true" data-template="nav-template" data-header-template="header-template" class="main-menu">
 
         <script type="text/x-kendo-template" id="header-template">
           <span class="km-icon km-#: value #"></span> #: value #
           </script>
 
         <script type="text/x-kendo-template" id="nav-template">
-          <a href="#: url #" class="課程名稱">#: 課程名稱 # <br>
-            <span style="font-size:16px; color: gray">#: 老師姓名 # </span>
-            <span style="font-size:16px; color: gray; float:right; margin-right:20px" >#: 課程時間 #</span>
+          <a href="#: url #" class="課程名稱">
+            <img src="picPlaceholder.png" width="70" height="70" style="float:left;margin-right:10px"/>          
+            <p style="font-size:12px; color: gray; margin-top:-8px"> #: 課程編號 # </p>
+            <p style="font-size:16px; color: darkslategray; margin-top:-10px; font-weight:bold">#: 課程名稱 # </p>
+            <p style="font-size:12px; color: gray; margin-top:-10px">#: 老師時間 # </p>
+            <p style="font-size:12px; color: gray; margin-top:-10px;margin-bottom:-35px">#: 課程費用 # </p>            
           </a>
         </script>
 
@@ -145,14 +156,14 @@
       <span class="報名課程title">參加過課程</span>
       <div style="height: 15px"></div>
 
-      <ul data-role="listview" data-source="courseHistorySource" data-pull-to-refresh="false" data-template="nav-template" data-header-template="header-template" class="main-menu">
+      <ul data-role="listview" data-source="courseHistorySource" data-pull-to-refresh="true" data-template="nav-template" data-header-template="header-template" class="main-menu">
 
         <script type="text/x-kendo-template" id="header-template">
           <span class="km-icon km-#: value #"></span> #: value #
           </script>
 
         <script type="text/x-kendo-template" id="nav-template">
-          <a href="#: url #" class="課程名稱">#: 課程名稱 # <br>
+          <a style="background-color:red;" href="#: url #" class="課程名稱">#: 課程名稱 # <br>
             <span style="font-size:16px; color: gray">#: 老師姓名 # </span>
             <span style="font-size:16px; color: gray; float:right; margin-right:20px" >#: 課程時間 #</span>
           </a>
