--- a/2-views/團課日程.html
+++ b/2-views/團課日程.html
@@ -196,7 +196,7 @@
       console.log("Change :" + selectedDate);
       emptyDataSource();
 
-//      courseData.forEach(function(course, index, array){
+//XXX      courseData.forEach(function(course, index, array){
       for (var index=0; index < courseData.length; index++){
         var course= courseData[index];
         var courseDateArr = course[3].split(" ");
@@ -237,7 +237,7 @@
             }            
           });
         }
-//        });
+//XXX        });
       };       
     }
 
@@ -306,7 +306,7 @@
       if (useLocalAPIs) {
         request.open('GET', 'http://localhost:5000' + paramToSend, true);
       } else {
-        request.open('GET', 'https://api-linko-sports-center.herokuapp.com/'+paramToSend, true);
+        request.open('GET', apiSite +paramToSend, true);
       }      
 
       request.onload = function() {
