--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
         <script type="text/x-kendo-template" id="nav-template">
           <a href="#: url #" class="課程名稱">
-            <img src="picPlaceholder.png" width="70" height="70" style="float:left;margin-right:10px"/>          
+            <img src="#: 課程圖片 #" width="70" height="70" style="float:left;margin-right:10px"/>          
             <p style="font-size:12px; color: gray; margin-top:-8px"> #: 課程編號 # </p>
             <p style="font-size:16px; color: darkslategray; margin-top:-10px; font-weight:bold">#: 課程名稱 # </p>
             <p style="font-size:12px; color: gray; margin-top:-10px">#: 老師時間 # </p>
@@ -163,9 +163,12 @@
           </script>
 
         <script type="text/x-kendo-template" id="nav-template">
-          <a style="background-color:red;" href="#: url #" class="課程名稱">#: 課程名稱 # <br>
-            <span style="font-size:16px; color: gray">#: 老師姓名 # </span>
-            <span style="font-size:16px; color: gray; float:right; margin-right:20px" >#: 課程時間 #</span>
+          <a href="#: url #" class="課程名稱">
+            <img src="#: 課程圖片 #" width="70" height="70" style="float:left;margin-right:10px"/>          
+            <p style="font-size:12px; color: gray; margin-top:-8px"> #: 課程編號 # </p>
+            <p style="font-size:16px; color: darkslategray; margin-top:-10px; font-weight:bold">#: 課程名稱 # </p>
+            <p style="font-size:12px; color: gray; margin-top:-10px">#: 老師時間 # </p>
+            <p style="font-size:12px; color: gray; margin-top:-10px;margin-bottom:-35px">#: 課程費用 # </p>            
           </a>
         </script>
 
