--- a/index.html
+++ b/index.html
@@ -304,7 +304,9 @@
     var 要報名的課程;
     var 要簽到的課程;
     var 已經是會員=false;
-    var 所有課程展開 = false;
+    var 所有課程展開 = true;
+    var 系列課程展開 = false;
+    var 日曆選擇的日期;
       
     notInCourse=[];
     inCourse=[];
